--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.6",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
